# thrift_ipc

./: CMakeLists.txt  README.md  client.cpp  client.py  example.thrift  server.cpp  thrift_service.h
